# bazel

./: .gitignore  MODULE.bazel  README.md
.github/workflows/: bazel_test.yml  test.yml
godump/: README.md  def.bzl
godump/example/: BUILD.bazel  def.bzl  out.sh  test.go
gotemplate/: BUILD.bazel  README.md  def.bzl  main.go
gotemplate/example/: BUILD.bazel  bar.tmpl  bar_out.go  foo.tmpl  in.tmpl  out.go  test.go
workspace/: BUILD.bazel  README.md  def.bzl
