load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main",
    srcs = ["main.go"],
    importpath = "github.com/burstsms/burst/eng/bazel/gotemplate",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gotemplate",
    embed = [":main"],
    msan = "off",
    pure = "on",
    race = "off",
    static = "off",
    visibility = ["//visibility:public"],
)