load("@rules_go//go:def.bzl", "go_test")
load("//gotemplate:def.bzl", "go_template")

go_template(
    name = "foo",
    testonly = True,
    args = {
        "Package": "example",
    },
    template = "foo.tmpl",
)

go_template(
    name = "bar",
    testonly = True,
    json_args ="""{"Codes":["red","blue"], "Bar":{"Name":"bar"}}""",
    template = "bar.tmpl",
)

go_test(
    name = "test",
    size = "small",
    srcs = [
        "test.go",
        ":foo",
        ":bar",
    ],
    data = [
        "foo_out.go",
        "bar_out.go",
        ":foo",
        ":bar",
    ],
)
